<resources>
    <string name="preferences_content">Hi \nIn this page you can edit your preferred coins. \nYou will get notifications on the crypto coins that are shown here.</string>
    <string name="app_name">Coin Trend Notifier</string>
    <string name="login_button_text">Sign in</string>
    <string name="login_email_hint">example@domain.com</string>
    <string name="login_password_hint">**********</string>
    <string name="login_welcome_text">Welcome</string>
    <string name="login_signup_text">Sign up</string>
    <string name="about_content">Hey, we\'re Yarden, Aviel and Alaa.\n\nWe made this app to help you in your cryptocurrency investments!\n\nHave fun getting predictions for upcoming trends.\n\nHere are a few links:\n• <a href="https://github.com/Aviel212/coin-trend-notifier-app">Source code for the app</a>\n• <a href="https://github.com/yardenshoham/coin-trend-notifier">Source code for the backend</a>\n• <a href="https://github.com/yardenshoham/coin-trend-notifier-website">Source code for the website</a>\n🤑</string>
    <string name="about">About us</string>
    <string name="password_change">Password Change</string>
    <string name="apply">Apply</string>
    <string name="confirm_new_password">confirm new Password:</string>
    <string name="new_password">new Password:</string>
    <string name="old_password">old Password:</string>
    <string name="account_settings">Account Settings</string>
    <string name="back_to_settings">Back To Settings</string>
    <string name="enter_old_password">Enter Old Password</string>
    <string name="change_password">Change Password</string>
    <string name="enter_new_password_again">Enter New Password Again</string>
    <string name="new_password1">New Password</string>
    <string name="enter_new_password">Enter New Password</string>
    <string name="old_password1">Old Password</string>
    <string name="confirm_password">Confirm Password</string>
    <string name="change_password1">Change Password</string>
    <string name="_0">0</string>
    <string name="forward_slash">/</string>
    <string name="signup_alertLimit_hint">Max notifications per hour</string>
    <string name="username">Username</string>
    <string name="email">Email</string>
    <string name="reset">Reset</string>
    <string name="update">Update</string>
    <string name="todo">TODO</string>
    <string name="preferences">Preferences</string>
    <string name="add_preference">✚ ADD PREFERENCE</string>
    <string name="save_preference">SAVE</string>
    <string name="base_asset">Base asset</string>
    <string name="quote_asset">Quote asset</string>
    <string name="percentage">Probability</string>
    <string name="trends">Trends</string>
    <string name="logout">Logout</string>
    <string name="about_menu">About</string>
    <string name="signup_cancel_text">cancel</string>
    <string name="signup_username_hint">Username</string>
    <string name="singup_label_text">Signup</string>
    <string name="Trends_header_text">Trends</string>
    <string-array name="coins_array">
        <item>BTC</item>
        <item>ETH</item>
        <item>TRX</item>
        <item>USDT</item>
    </string-array>
    <string-array name="percentage_array">
        <item>10%</item>
        <item>20%</item>
        <item>30%</item>
        <item>40%</item>
        <item>50%</item>
        <item>60%</item>
        <item>70%</item>
        <item>80%</item>
        <item>90%</item>
    </string-array>
</resources>
