<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:gravity="center"
    android:orientation="vertical"
    tools:context=".ui.preferences.AddPreferenceActivity">

    <TextView
        style="@style/TextAppearance.AppCompat.Body1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/base_asset"
        android:textSize="25sp" />

    <Spinner
        android:id="@+id/base_asset"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textSize="20sp" />

    <TextView
        style="@style/TextAppearance.AppCompat.Body1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/quote_asset"
        android:textSize="25sp" />

    <Spinner
        android:id="@+id/quote_asset"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textSize="20sp" />

    <TextView
        style="@style/TextAppearance.AppCompat.Body1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/percentage"
        android:textSize="25sp" />

    <Spinner
        android:id="@+id/add_preference_percentage"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textSize="20sp" />

    <com.beardedhen.androidbootstrap.BootstrapButton
        android:id="@+id/add_preference"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:bootstrapBrand="primary"
        app:bootstrapSize="lg"
        app:bootstrapText="@string/save_preference"
        app:buttonMode="regular"
        app:showOutline="false" />

    <com.beardedhen.androidbootstrap.AwesomeTextView
        android:id="@+id/add_preference_error"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:fontFamily="sans-serif-smallcaps"
        android:textSize="16sp"
        android:textStyle="bold"
        app:bootstrapBrand="danger"
        app:bootstrapText=" " />
</LinearLayout>