<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.login.LoginActivity">

    <com.beardedhen.androidbootstrap.BootstrapButton
        android:id="@+id/signup"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/alert_limit"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="50dp"
        android:text="Sign up"
        app:bootstrapBrand="primary"
        app:bootstrapSize="lg"
        app:buttonMode="regular"
        app:roundedCorners="true"
        app:showOutline="false" />

    <com.beardedhen.androidbootstrap.BootstrapButton
        android:id="@+id/cancel"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/signup"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="37dp"
        android:text="@string/signup_cancel_text"
        app:bootstrapBrand="primary"
        app:bootstrapSize="lg"
        app:buttonMode="regular"
        app:roundedCorners="true"
        app:showOutline="true" />

    <com.beardedhen.androidbootstrap.BootstrapEditText
        android:id="@+id/email"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/signup_header"
        android:layout_centerHorizontal="true"
        android:layout_centerVertical="true"
        android:layout_marginLeft="100dp"
        android:layout_marginTop="50dp"
        android:ems="10"
        android:hint="@string/login_email_hint"
        android:inputType="textEmailAddress"
        app:bootstrapSize="lg"
        app:roundedCorners="true"
        tools:ignore="TextFields" />

    <com.beardedhen.androidbootstrap.BootstrapEditText
        android:id="@+id/password"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/email"
        android:layout_centerHorizontal="true"
        android:layout_marginLeft="100dp"
        android:layout_marginTop="10dp"
        android:ems="10"
        android:hint="@string/login_password_hint"
        android:inputType="textPassword"
        app:bootstrapSize="lg"
        app:roundedCorners="true" />

    <com.beardedhen.androidbootstrap.BootstrapEditText
        android:id="@+id/username"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/password"
        android:layout_centerHorizontal="true"
        android:layout_centerVertical="true"
        android:layout_marginLeft="100dp"
        android:layout_marginTop="10dp"
        android:ems="10"
        android:hint="@string/signup_username_hint"
        android:inputType="textPersonName"
        app:bootstrapSize="lg"
        app:roundedCorners="true"
        tools:ignore="TextFields" />

    <com.beardedhen.androidbootstrap.BootstrapEditText
        android:id="@+id/alert_limit"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/username"
        android:layout_centerHorizontal="true"
        android:layout_centerVertical="true"
        android:layout_marginLeft="100dp"
        android:layout_marginTop="10dp"
        android:ems="10"
        android:hint="@string/signup_alertLimit_hint"
        android:inputType="number"
        app:bootstrapSize="lg"
        app:roundedCorners="true"
        tools:ignore="TextFields" />

    <com.beardedhen.androidbootstrap.BootstrapLabel
        android:id="@+id/signup_header"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:text="@string/singup_label_text"
        app:bootstrapHeading="h1" />

    <com.beardedhen.androidbootstrap.AwesomeTextView
        android:id="@+id/login_error"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/cancel"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="50dp"
        android:fontFamily="sans-serif-smallcaps"
        android:textSize="16sp"
        android:textStyle="bold"
        app:bootstrapBrand="danger"
        app:bootstrapText=" "
        app:fontAwesomeIcon="fa_android" />
</RelativeLayout>