<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.password.PasswordActivity">

    <com.beardedhen.androidbootstrap.BootstrapButton
        android:id="@+id/BackToSettingsBtn"
        android:layout_width="195dp"
        android:layout_height="0dp"
        android:layout_centerHorizontal="true"
        android:layout_marginBottom="54dp"
        android:text="@string/back_to_settings"
        android:textSize="12sp"
        app:bootstrapBrand="primary"
        app:bootstrapSize="lg"
        app:buttonMode="regular"
        app:layout_constraintBottom_toTopOf="@+id/passwordError"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/changePasswordBtn"
        app:roundedCorners="true"
        app:showOutline="true" />

    <com.beardedhen.androidbootstrap.BootstrapEditText
        android:id="@+id/oldPassword"
        android:layout_width="312dp"
        android:layout_height="0dp"
        android:layout_centerHorizontal="true"
        android:layout_marginStart="8dp"
        android:layout_marginLeft="8dp"
        android:layout_marginBottom="27dp"
        android:ems="10"
        android:hint="@string/enter_old_password"
        android:inputType="textPassword"
        app:bootstrapSize="lg"
        app:layout_constraintBottom_toTopOf="@+id/new_content"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/old_content"
        app:roundedCorners="true" />

    <com.beardedhen.androidbootstrap.AwesomeTextView
        android:id="@+id/passwordError"
        android:layout_width="101dp"
        android:layout_height="0dp"
        android:layout_centerHorizontal="true"
        android:layout_marginBottom="52dp"
        android:fontFamily="sans-serif-smallcaps"
        android:textSize="16sp"
        android:textStyle="bold"
        app:bootstrapBrand="danger"
        app:bootstrapText=" "
        app:fontAwesomeIcon="fa_android"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/BackToSettingsBtn"
        tools:ignore="MissingConstraints" />

    <com.beardedhen.androidbootstrap.BootstrapButton
        android:id="@+id/changePasswordBtn"
        android:layout_width="193dp"
        android:layout_height="0dp"
        android:layout_centerHorizontal="true"
        android:layout_marginBottom="35dp"
        android:text="@string/change_password"
        app:bootstrapBrand="primary"
        app:bootstrapSize="lg"
        app:buttonMode="regular"
        app:layout_constraintBottom_toTopOf="@+id/BackToSettingsBtn"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/confirmedPassword"
        app:roundedCorners="true"
        app:showOutline="false" />

    <com.beardedhen.androidbootstrap.BootstrapEditText
        android:id="@+id/confirmedPassword"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_centerHorizontal="true"
        android:layout_marginStart="3dp"
        android:layout_marginLeft="3dp"
        android:layout_marginEnd="3dp"
        android:layout_marginRight="3dp"
        android:layout_marginBottom="36dp"
        android:ems="10"
        android:hint="@string/enter_new_password_again"
        android:inputType="textPassword"
        app:bootstrapSize="lg"
        app:layout_constraintBottom_toTopOf="@+id/changePasswordBtn"
        app:layout_constraintEnd_toEndOf="@+id/newPassword"
        app:layout_constraintStart_toStartOf="@+id/oldPassword"
        app:layout_constraintTop_toBottomOf="@+id/confirm_content"
        app:roundedCorners="true" />

    <TextView
        android:id="@+id/confirm_content"
        style="@style/TextAppearance.AppCompat.Body1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:layout_marginStart="14dp"
        android:layout_marginLeft="14dp"
        android:layout_marginBottom="14dp"
        android:text="@string/confirm_password"
        android:textSize="25sp"
        app:layout_constraintBottom_toTopOf="@+id/confirmedPassword"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/newPassword" />

    <com.beardedhen.androidbootstrap.BootstrapEditText
        android:id="@+id/newPassword"
        android:layout_width="312dp"
        android:layout_height="0dp"
        android:layout_centerHorizontal="true"
        android:layout_marginStart="11dp"
        android:layout_marginLeft="11dp"
        android:layout_marginBottom="31dp"
        android:ems="10"
        android:hint="@string/enter_new_password"
        android:inputType="textPassword"
        app:bootstrapSize="lg"
        app:layout_constraintBottom_toTopOf="@+id/confirm_content"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/new_content"
        app:roundedCorners="true" />

    <TextView
        android:id="@+id/new_content"
        style="@style/TextAppearance.AppCompat.Body1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:layout_marginStart="14dp"
        android:layout_marginLeft="14dp"
        android:layout_marginBottom="17dp"
        android:text="@string/new_password1"
        android:textSize="25sp"
        app:layout_constraintBottom_toTopOf="@+id/newPassword"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/oldPassword" />

    <TextView
        android:id="@+id/old_content"
        style="@style/TextAppearance.AppCompat.Body1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:layout_marginStart="16dp"
        android:layout_marginLeft="16dp"
        android:layout_marginBottom="22dp"
        android:text="@string/old_password1"
        android:textSize="25sp"
        app:layout_constraintBottom_toTopOf="@+id/oldPassword"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/header2" />

    <com.beardedhen.androidbootstrap.BootstrapLabel
        android:id="@+id/header2"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginBottom="61dp"
        android:gravity="center"
        android:text="@string/passowrd_change"
        app:bootstrapHeading="h1"
        app:layout_constraintBottom_toTopOf="@+id/old_content"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

</androidx.constraintlayout.widget.ConstraintLayout>