<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.AccountSettings.AccountSettingsActivity">

    <com.beardedhen.androidbootstrap.BootstrapEditText
        android:id="@+id/email"
        android:layout_width="267dp"
        android:layout_height="43dp"
        android:layout_centerHorizontal="true"
        android:layout_centerVertical="true"
        android:layout_marginStart="16dp"
        android:layout_marginLeft="16dp"
        android:layout_marginTop="24dp"
        android:ems="10"
        android:hint="@string/login_email_hint"
        android:inputType="textPersonName"
        app:bootstrapSize="lg"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/old_content3"
        app:roundedCorners="true"
        tools:ignore="TextFields" />

    <com.beardedhen.androidbootstrap.BootstrapEditText
        android:id="@+id/AlertLimit"
        android:layout_width="267dp"
        android:layout_height="0dp"
        android:layout_centerHorizontal="true"
        android:layout_centerVertical="true"
        android:layout_marginBottom="310dp"
        android:ems="10"
        android:hint="@string/_0"
        android:inputType="textPersonName"
        android:text="@string/_0"
        app:bootstrapSize="lg"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="@+id/old_content4"
        app:layout_constraintTop_toBottomOf="@+id/old_content4"
        app:roundedCorners="true"
        tools:ignore="TextFields" />

    <TextView
        android:id="@+id/old_content4"
        style="@style/TextAppearance.AppCompat.Body1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:layout_marginStart="20dp"
        android:layout_marginLeft="20dp"
        android:layout_marginBottom="17dp"
        android:text="@string/alert_limit"
        android:textSize="25sp"
        app:layout_constraintBottom_toTopOf="@+id/AlertLimit"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/header3" />

    <TextView
        android:id="@+id/old_content3"
        style="@style/TextAppearance.AppCompat.Body1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:layout_marginStart="20dp"
        android:layout_marginLeft="20dp"
        android:layout_marginBottom="19dp"
        android:text="@string/email"
        android:textSize="25sp"
        app:layout_constraintBottom_toTopOf="@+id/email"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/header3" />

    <TextView
        android:id="@+id/old_content2"
        style="@style/TextAppearance.AppCompat.Body1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:layout_marginStart="16dp"
        android:layout_marginLeft="16dp"
        android:layout_marginTop="32dp"
        android:text="@string/username"
        android:textSize="25sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/email" />

    <com.beardedhen.androidbootstrap.BootstrapEditText
        android:id="@+id/Username"
        android:layout_width="267dp"
        android:layout_height="43dp"
        android:layout_centerHorizontal="true"
        android:layout_centerVertical="true"
        android:layout_marginTop="20dp"
        android:ems="10"
        android:hint="@string/username"
        android:inputType="textPersonName"
        app:bootstrapSize="lg"
        app:layout_constraintStart_toStartOf="@+id/old_content4"
        app:layout_constraintTop_toBottomOf="@+id/old_content2"
        app:roundedCorners="true"
        tools:ignore="TextFields" />

    <com.beardedhen.androidbootstrap.BootstrapLabel
        android:id="@+id/header3"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginBottom="269dp"
        android:gravity="center"
        android:text="@string/account_settings"
        app:bootstrapHeading="h1"
        app:layout_constraintBottom_toTopOf="@+id/old_content4"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <com.beardedhen.androidbootstrap.BootstrapButton
        android:id="@+id/BackToPasswordBtn"
        android:layout_width="200dp"
        android:layout_height="45dp"
        android:layout_centerHorizontal="true"
        android:layout_marginStart="74dp"
        android:layout_marginLeft="74dp"
        android:layout_marginBottom="19dp"
        android:text="@string/change_password"
        android:textSize="12sp"
        app:bootstrapBrand="primary"
        app:bootstrapSize="lg"
        app:buttonMode="regular"
        app:layout_constraintBottom_toTopOf="@+id/updateBtn"
        app:layout_constraintStart_toStartOf="@+id/AlertLimit"
        app:layout_constraintTop_toBottomOf="@+id/AlertLimit"
        app:roundedCorners="true"
        app:showOutline="true" />

    <com.beardedhen.androidbootstrap.BootstrapButton
        android:id="@+id/resetBtn"
        android:layout_width="91dp"
        android:layout_height="46dp"
        android:layout_centerHorizontal="true"
        android:layout_marginStart="17dp"
        android:layout_marginLeft="17dp"
        android:layout_marginEnd="17dp"
        android:layout_marginRight="17dp"
        android:text="@string/reset"
        android:textSize="14sp"
        app:bootstrapBrand="primary"
        app:bootstrapSize="lg"
        app:buttonMode="regular"
        app:layout_constraintBottom_toTopOf="@+id/settingsError"
        app:layout_constraintEnd_toEndOf="@+id/updateBtn"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="@+id/updateBtn"
        app:layout_constraintTop_toBottomOf="@+id/updateBtn"
        app:roundedCorners="true"
        app:showOutline="true" />

    <com.beardedhen.androidbootstrap.BootstrapButton
        android:id="@+id/updateBtn"
        android:layout_width="128dp"
        android:layout_height="50dp"
        android:layout_centerHorizontal="true"
        android:layout_marginBottom="18dp"
        android:text="@string/update"
        android:textSize="18sp"
        app:bootstrapBrand="primary"
        app:bootstrapSize="lg"
        app:buttonMode="regular"
        app:layout_constraintBottom_toTopOf="@+id/resetBtn"
        app:layout_constraintEnd_toEndOf="@+id/BackToPasswordBtn"
        app:layout_constraintHorizontal_bias="0.492"
        app:layout_constraintStart_toStartOf="@+id/BackToPasswordBtn"
        app:layout_constraintTop_toBottomOf="@+id/BackToPasswordBtn"
        app:roundedCorners="true"
        app:showOutline="false" />

    <com.beardedhen.androidbootstrap.AwesomeTextView
        android:id="@+id/settingsError"
        android:layout_width="76dp"
        android:layout_height="0dp"
        android:layout_below="@id/resetBtn"
        android:layout_centerHorizontal="true"
        android:layout_marginBottom="24dp"
        android:fontFamily="sans-serif-smallcaps"
        android:textSize="16sp"
        android:textStyle="bold"
        app:bootstrapBrand="danger"
        app:bootstrapText=" "
        app:fontAwesomeIcon="fa_android"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="@+id/resetBtn"
        app:layout_constraintStart_toStartOf="@+id/resetBtn" />
</androidx.constraintlayout.widget.ConstraintLayout>